Fixed more css spacing issues

--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -12,5 +12,10 @@
 }
 
 .reservation-desc {
-  margin-bottom: 20px !important;
+  margin-bottom: 10px !important;
+}
+
+.payment-btn,
+.delete-btn {
+  margin-bottom: 10px;
 }
